--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,18 +13,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Validate composer.json
       run: composer validate
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
-    
-    - name: Run tests
-      run: ./vendor/bin/simple-phpunit --coverage-html build/coverage-report
 
-    - name: Archive code coverage results
-      uses: actions/upload-artifact@v1
+    - name: Run tests
+      run: ./vendor/bin/simple-phpunit --coverage-clover clover.xml
+
+    - name: Run codacy-coverage-reporter
+      uses: mrfyda/codacy-coverage-reporter-action@master
       with:
-        name: code-coverage-report
-        path: build/coverage-report
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
