--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,6 +22,7 @@
         <whitelist>
             <directory>./</directory>
             <exclude>
+                <file>./SendinblueMailerBundle.php</file>
                 <directory>./DependencyInjection</directory>
                 <directory>./Resources</directory>
                 <directory>./Tests</directory>
